codepkg/objects/FEMA_Code_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacity/Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FEMA Code</label>
        <referenceTo>FEMA_Code__c</referenceTo>
        <relationshipLabel>FEMA Schedule of Equipment</relationshipLabel>
        <relationshipName>FEMA_Schedule_of_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specifications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FEMA Schedule of Equipment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEMA Schedule of Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>